# elegantt

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  reinstall.sh  run_unittest.sh  setup.py  setup_twine.sh  uninstall_and_install.sh
elegantt/: __init__.py  command.py  elegantt.py  utils.py
elegantt/tests/: sample.csv  sample_markdown.md  sample_mermaid.txt  test.py  test_elegantt.py  test_scenario.py  test_simple.py
